--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,3 @@
-Create further config files, allowing ALL settings such as distance, radius, mins and maxes to be adjusted from there
-Load configs on program start and pass to classes
+Add error checking for misconfigured config
+Improve tracking of ball
 Eventually dynamic config?
